--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "mapbox-gl": "^3.18.1",
+    "nanoid": "^5.1.6",
     "next": "^14.2.35",
     "postcss": "^8.5.6",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-map-gl": "^8.1.0",
